added placeholders in the About page.

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
       <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">About CASA</h2>
-          <p class="lead my-3">Add some sort of image and short interesting description here.</p>
+          <p class="lead my-3">[Placeholder] A brief introduction of CASA. Call for colleagues/arch students to join. </p>
           <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
         </div>
       </div>
@@ -45,12 +45,68 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Some Title</h3>
+          <h3>Mission Statement</h3>
           <p>
-            Enter content here.
+            [Placeholder. Will fill in after this Friday's discussion.]
+            <a href="https://www.sigarch.org/benefit/cares/cares-bylaws/">SIGARCH CARES</a> might be a great example. 
           </p>
         </div>
       </div>
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>ByLaws</h3>
+            <ul>
+              <li><h4>Committee member responsibilities</h4>
+                <p>[Placeholder] The remainder of this document outlines the policies for governance of the CASA committee, including chair rotation, membership, autonomy, and conflicts of interest on the CASA committee.</p>
+              </li>
+
+              <li><h4>Ethics and conflicts of Interest</h4>
+                <p>[Placeholder] CASA members will be held to the highest standards of conduct and discretion.</p>
+              </li>
+
+            </ul>
+        </div>
+      </div>
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Officers</h3>
+            <div class="about-officer-row">
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="O1" style="width:70%">
+                <p>Name</p>
+                <p>Email, Afflination</p>
+              </div>
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="O2" style="width:70%">
+                <p>Name</p>
+                <p>Email, Afflination</p>
+              </div>
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="O3" style="width:70%">
+                <p>Name</p>
+                <p>Email, Afflination</p>  
+              </div>
+            </div>
+        </div>
+      </div> 
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Current Members</h3>
+          <ul>
+            <li></li>
+          </ul>
+        </div>
+      </div>      
+
     </main>
     
     <footer class="container page-footer">
