Updating mission statement

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
           <div class="p-4 mb-3 bg-light rounded">
             <h4 class="font-italic">What is CASA?</h4>
             <p class="mb-0">
-              The Computer Architecture Student Association is a
-              student-led organization whose goal is to assist
-              graduate and undergraduate students who are working
-              in the field of computer architecture and in related
-              domains.
+            The Computer Architecture Student Association (CASA) is an
+            independent student-run organization with the express purpose of
+            developing and fostering a positive and inviting student community
+            within computer architecture. Created by students for students,
+            CASA aims to support the student community throughout the demanding
+            years of academic study.
             </p>
           </div>
 
@@ -89,7 +90,7 @@
         </aside>
       </div>
     </main>
-    
+
     <footer class="container page-footer">
       <div class="row py-2">
         <div class="col-12 text-center">
