--- a/resources/index.html
+++ b/resources/index.html
@@ -33,10 +33,10 @@
         </nav>
       </div>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead lead-resources">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">Resources for Students</h2>
-          <p class="lead my-3">Add some sort of image and short interesting description here.</p>
+          <p class="lead my-3">[Placeholder] Links and descriptions of blog posts, articles, etc. written by CASA, as well as external resources.</p>
           <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
         </div>
       </div>
@@ -45,9 +45,33 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Some Title</h3>
+          <h3>Blog Posts by CASA</h3>
+          <p><h4>Featured Posts</h4>
+            <ul>
+              <li>
+            </ul>
+          </p>
+          <p><h4>All Posts</h4>
+            <ul>
+              <li> October 2020
+                <ul>
+                  <li>
+                </ul>
+              <li> 
+            </ul>
+        </div>
+      </div>
+    </main>
+    
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>External Resources</h3>
           <p>
-            Enter content here.
+            <a href="https://www.youtube.com/watch?v=Rn1w4MRHIhc">How to Have a Bad Career | David Patterson | Talks at Google</a>
+          </p>
+          <p>
+            <a href="https://people.eecs.berkeley.edu/~pattrsn/talks/BadTalk.pdf">How to Give a Bad Talk - David Patterson</a>
           </p>
         </div>
       </div>
