--- a/events/index.html
+++ b/events/index.html
@@ -33,11 +33,13 @@
         </nav>
       </div>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead lead-events">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">Events</h2>
-          <p class="lead my-3">Add some sort of image and short interesting description here.</p>
+          <p class="lead my-3">Connect with the community through CASA-sponsored events and other events for architecture students!</p>
+          <!--
           <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
+          -->
         </div>
       </div>
     </div>
@@ -45,10 +47,42 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Some Title</h3>
-          <p>
-            Enter content here.
-          </p>
+          <h3>October 2020</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
+            <div class="small">
+              Sunday, October 18, 10 AM EDT
+            </div>
+            <h5><a href="https://jobs.eecs.umich.edu/">JOBS Workshop</a></h5>
+            <p>
+              A workshop to help senior graduate students and postdocs prepare for their upcoming job searches.
+            </p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
+            <div class="small">
+              Sunday, October 18, 10 AM EDT
+            </div>
+            <h5><a href="https://sites.google.com/view/uarch2020/">uArch Workshop</a></h5>
+            <p>
+              An intro for undergraduate and Master's students to research and career opportunities in the field of computer architecture in particular and graduate school lifestyle and survival skills in general.
+            </p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-info">
+            <div class="small">
+              Monday, October 19 &ndash; Wednesday, October 21
+            </div>
+            <h5>CASA at MICRO 2020</h5>
+            <p>
+              CASA will be helping to organize the Meet-a-Senior-Architect and Meet-a-Senior-Student at MICRO 2020.  Signups will be posted soon!
+            </p>
+          </div>
         </div>
       </div>
     </main>
