--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           and how you can help shape its future.</p>
           <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
           -->
+          <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
         </div>
       </div>
     </div>
@@ -68,16 +69,16 @@
             <p class="mb-0">
             To learn more about CASA and get involved with the community, resources, and upcoming events, you can:
             <ol>
-              <li> <a href=""> Sign up </a> for the list serve to get emails about upcoming events and resources for students in computer architecture </li>
-              <li> <a href=""> Join    </a> our Slack and Twitter to connect with other students in the computer architecture community </li>
-              <li> <a href=""> Join    </a> the organizing committee to help plan events for the broader CASA community. </li>
+              <li> <a href="#">Sign up</a> for the CASA listserv to get emails about upcoming events and resources for students in computer architecture </li>
+              <li> <a href="#">Join</a> our Slack and Twitter to connect with other students in the computer architecture community </li>
+              <li> <a href="#">Join</a> the organizing committee to help plan events for the broader CASA community. </li>
             </ol>
-            <img src="images/welcome.jpg" alt="Girl in a jacket" width="700">
+            <!-- <img src="images/welcome.jpg" alt="Girl in a jacket" width="700"> -->
             </p>
           </div>
         </div>
 
-        <aside class="col-md-4 blog-sidebar">
+        <aside class="col-md-4 sidebar">
 
           <div class="p-4">
             <h4 class="font-italic">Upcoming Events</h4>
