Couple more links in Resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -67,12 +67,21 @@
       <div class="row">
         <div class="col-md-12">
           <h3>External Resources</h3>
-          <p>
-            <a href="https://www.youtube.com/watch?v=Rn1w4MRHIhc">How to Have a Bad Career | David Patterson | Talks at Google</a>
-          </p>
-          <p>
-            <a href="https://people.eecs.berkeley.edu/~pattrsn/talks/BadTalk.pdf">How to Give a Bad Talk - David Patterson</a>
-          </p>
+            <p><h4>Talks / Posts</h4>
+              <p>
+              <a href="https://www.youtube.com/watch?v=Rn1w4MRHIhc">How to Have a Bad Career | David Patterson | Talks at Google</a>
+              </p>
+              <p>
+              <a href="https://people.eecs.berkeley.edu/~pattrsn/talks/BadTalk.pdf">How to Give a Bad Talk - David Patterson</a>
+              </p>
+            <p><h4>Links</h4>
+              <p>
+              <a href="https://www.sigarch.org/">ACM SIGARCH</a> 
+              (<a href="https://www.sigarch.org/blog/">blog page</a>)
+              </p>
+              <p>
+              <a href="https://www.sigarch.org/wicarch/">WICARCH</a>
+            </p>
         </div>
       </div>
     </main>
