updated the About page.

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
       <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">About CASA</h2>
-          <p class="lead my-3">[Placeholder] A brief introduction of CASA. Call for colleagues/arch students to join. </p>
+          <p class="lead my-3">The Computer Architecture Student Association (CASA) is a student-run organization serving both as a community and a resource for computer architecture students.</p>
           <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
         </div>
       </div>
@@ -46,9 +46,8 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Mission Statement</h3>
-          <p>
-            [Placeholder. Will fill in after this Friday's discussion.]
-            <a href="https://www.sigarch.org/benefit/cares/cares-bylaws/">SIGARCH CARES</a> might be a great example. 
+          <p>The Computer Architecture Student Association (CASA) is an independent student-run organization with the express purpose of developing and fostering a positive and inviting student community within computer architecture. Created by students for students, CASA aims to support the student community throughout the demanding years of academic study. <br><br>
+          The purpose of CASA is to serve both as a community and a resource for computer architecture students. CASA aims to be a safe place—one where students can openly share concerns with regards to the many difficult (yet little discussed) academic situations they encounter. Students can gain quality insight from their peers and foster both academic and social connections.  
           </p>
         </div>
       </div>
@@ -57,17 +56,10 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h3>ByLaws</h3>
-            <ul>
-              <li><h4>Committee member responsibilities</h4>
-                <p>[Placeholder] The remainder of this document outlines the policies for governance of the CASA committee, including chair rotation, membership, autonomy, and conflicts of interest on the CASA committee.</p>
-              </li>
-
-              <li><h4>Ethics and conflicts of Interest</h4>
-                <p>[Placeholder] CASA members will be held to the highest standards of conduct and discretion.</p>
-              </li>
-
-            </ul>
+          <h3>Community Member Responsibility</h3>
+          <p>CASA is you. What we as students put into CASA is what we can get back. That said, a student’s first responsibility is always their academic course/program work. While we wish students to be active participants, it should not be to the detriment of their academic work. <br><br>
+          In fact, we aim for the opposite. We hope CASA to be complementary to a student’s academic experience—it should help connect students with their peers for academic and social support. 
+          </p>
         </div>
       </div>
 
@@ -75,7 +67,33 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h3>Officers</h3>
+          <h3>Community Member Eligibility</h3>
+          <p>There are no strict eligibility requirements to be part of CASA. However, the community is geared toward graduate (and undergraduate) students in the academic research area of computer architecture. Once a student has graduated from their program/institution, there is no requirement to stop participating in CASA activities or an inability to attend events it holds. “Graduation” out of CASA is up to the student to graduate her/himself.</p>
+          <!-- <ul>
+              <li><h4>Committee member responsibilities</h4>
+                <p></p>
+              </li>
+              <li><h4>Ethics and conflicts of Interest</h4>
+                <p></p>
+              </li>
+            </ul> -->
+        </div>
+      </div>
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">  
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>History</h3>
+          <p>The creation of CASA was spurred by events in mid-to-late 2019. First, the unnecessary loss of a student in our community raised questions and concerns about the health and state of our computer architecture graduate students. At the MICRO 2019 business meeting, graduate students vocally expressed frustration about their perceived lack of academic and personal support within their institutions and out. Interest in the creation of a student community was gauged at subsequent computer architecture conferences through 2020, with positive feedback received. Today, with the help of student volunteers, CASA is becoming a reality.</p>
+        </div>
+      </div>
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Steering Committee</h3>
             <div class="about-officer-row">
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="O1" style="width:70%">
@@ -105,7 +123,9 @@
             <li></li>
           </ul>
         </div>
-      </div>      
+      </div> 
+
+      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
 
     </main>
     
