updated the about page.

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
         </nav>
       </div>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead-about">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">About CASA</h2>
           <p class="lead my-3">The Computer Architecture Student Association (CASA) is a student-run organization serving both as a community and a resource for computer architecture students.</p>
@@ -119,9 +119,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Current Members</h3>
-          <ul>
-            <li></li>
-          </ul>
+          <p>We are waiting for you! If you are interested in joining CASA, please sign up <a href="join/index.html">here</a>.</p>
         </div>
       </div> 
 
