general HTML cleanup

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style/style.css">
   </head>
@@ -37,7 +38,6 @@
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">About CASA</h2>
           <p class="lead my-3">The Computer Architecture Student Association (CASA) is a student-run organization serving both as a community and a resource for computer architecture students.</p>
-          <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+      <hr />
 
       <div class="row">
         <div class="col-md-12">
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+      <hr />
 
       <div class="row">
         <div class="col-md-12">
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">  
+      <hr />
 
       <div class="row">
         <div class="col-md-12">
@@ -89,32 +89,32 @@
         </div>
       </div>
 
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+      <hr />
 
       <div class="row">
         <div class="col-md-12">
           <h3>Steering Committee</h3>
             <div class="about-officer-row">
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="O1" style="width:70%">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p>Name</p>
-                <p>Email, Afflination</p>
+                <p>Email, Affiliation</p>
               </div>
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="O2" style="width:70%">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p>Name</p>
-                <p>Email, Afflination</p>
+                <p>Email, Affiliation</p>
               </div>
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="O3" style="width:70%">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p>Name</p>
-                <p>Email, Afflination</p>  
+                <p>Email, Affiliation</p>  
               </div>
             </div>
         </div>
       </div> 
 
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
+      <hr />
 
       <div class="row">
         <div class="col-md-12">
@@ -122,9 +122,6 @@
           <p>We are waiting for you! If you are interested in joining CASA, please sign up <a href="join/index.html">here</a>.</p>
         </div>
       </div> 
-
-      <hr style="height:0.3px;border-width:0;color:#cfcfcf;background-color:#cfcfcf;">
-
     </main>
     
     <footer class="container page-footer">
