--- a/contact/index.html
+++ b/contact/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style/style.css">
   </head>
@@ -33,22 +34,46 @@
         </nav>
       </div>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead lead-contact">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">Questions? Get in Touch!</h2>
-          <p class="lead my-3">Add some sort of image and short interesting description here.</p>
-          <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
+          <p class="lead my-3">Connect with CASA through email or social media.</p>
         </div>
       </div>
     </div>
 
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h3>Some Title</h3>
+        <div class="col-sm-12 col-md-7">
+          <h3>Send Us an Email</h3>
           <p>
-            Enter content here.
+            Have any questions that you can't find answers for on here?
+            Feel free to drop us an email at 
+            <a href="mailto:comparchsa@gmail.com">comparchsa@gmail.com</a>!
           </p>
+          <h3>Join Our Mailing List</h3>
+          <p>
+            We have a community listserv, where we send periodic emails 
+            with updates that we believe are relevant to the CASA community,
+            and with announcements for upcoming events by CASA and by
+            other student-oriented groups.
+            To receive these updates, you can
+            <a href="#">sign up for our listserv</a>.
+          </p>
+          <h3>Social Media</h3>
+          <p>
+            We're (planning to be) active on social media!
+            Follow CASA on Twitter:
+            <a href="https://twitter.com/CompArchSA">@CompArchSA</a>
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-5">
+          <div class="container-pad-top text-center">
+            <p><a class="twitter-timeline" height="400px" width="600px" href="https://twitter.com/CompArchSA" data-widget-id="579313990217699328" style="float: right ;">Tweets </a>
+            <script>!function(d,s,id){var
+js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </p>
+          </div>
         </div>
       </div>
     </main>
