--- a/join/index.html
+++ b/join/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style/style.css">
   </head>
@@ -33,11 +34,10 @@
         </nav>
       </div>
 
-      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead">
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead lead-join">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">Become a CASA Member!</h2>
-          <p class="lead my-3">Add some sort of image and short interesting description here.</p>
-          <p class="lead mb-0"><a class="btn btn-light" href="join/" role="button">Read more</a></p>
+          <p class="lead my-3">CASA is stronger with your voice. Let's help each other grow.</p>
         </div>
       </div>
     </div>
