removing dummy content for now

--- a/join/index.html
+++ b/join/index.html
@@ -45,9 +45,9 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Some Title</h3>
+          <h3>CASA Sign-Up</h3>
           <p>
-            Enter content here.
+            Coming soon!  In the meantime, take a look at the rest of our website to see what CASA's all about!
           </p>
         </div>
       </div>
