--- a/resources/index.html
+++ b/resources/index.html
@@ -46,19 +46,21 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Blog Posts by CASA</h3>
-          <p><h4>Featured Posts</h4>
-            <ul>
-              <li></li>
-            </ul>
-          </p>
-          <p><h4>All Posts</h4>
-            <ul>
-              <li> October 2020
-                <ul>
-                  <li></li>
-                </ul>
-              <li> 
-            </ul>
+          <p>Look for our first post on the week of October 18!</p>
+          <!--
+          <h4>Featured Posts</h4>
+          <ul>
+            <li></li>
+          </ul>
+          <h4>All Posts</h4>
+          <ul>
+            <li> October 2020
+              <ul>
+                <li></li>
+              </ul>
+            <li> 
+          </ul>
+          -->
         </div>
       </div>
       
