updating emails to custom domain

--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,7 @@
           <p>
             Have any questions that you can't find answers for on here?
             Feel free to drop us an email at 
-            <a href="mailto:comparchsa@gmail.com">comparchsa@gmail.com</a>!
+            <a href="mailto:info@comparchsa.org">info@comparchsa.org</a>!
           </p>
           <h3>Join Our Mailing List</h3>
           <p>
