--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h4 class="font-italic">Connect with CASA</h4>
             <ol class="list-unstyled">
               <li class="pb-2">
-                <a href="mailto:comparchsa@gmail.com"><span class="fa fa-envelope"></span> Email</a>
+                <a href="mailto:info@comparchsa.org"><span class="fa fa-envelope"></span> Email</a>
               </li>
              <li class="pb-2">
                 <a href="https://twitter.com/CompArchSA"><span class="fa fa-twitter"></span> @CompArchSA</a>
