Add link to the sign-up form and group

--- a/contact/index.html
+++ b/contact/index.html
@@ -57,8 +57,9 @@
             with updates that we believe are relevant to the CASA community,
             and with announcements for upcoming events by CASA and by
             other student-oriented groups.
-            To receive these updates, you can
-            <a href="#">sign up for our listserv</a>.
+          <br><br>
+            Please join our Slack workspace and mailing list <a href="join/index.html">here</a>.
+            If you would like to change the frequency at which you receive these updates, you can change the settings at our <a href="https://groups.google.com/g/comparchsa">Google Group page</a> once you have been added.
           </p>
           <h3>Social Media</h3>
           <p>
