--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="https://twitter.com/CompArchSA"><span class="fa fa-twitter"></span> @CompArchSA</a>
               </li>
              <li>
-                <a href="#"><span class="fa fa-bullhorn"></span> Join Our Mailing List</a>
+                <a href="join/index.html"><span class="fa fa-bullhorn"></span> Join Our Mailing List</a>
               </li>
             </ol>
           </div>
