Fixing broken links and pending items

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
       <header class="page-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-12 text-center">
-            <a class="page-title text-dark" href="#">Computer Architecture Student Association</a>
+            <a class="page-title text-dark" href="index.html">Computer Architecture Student Association</a>
           </div>
         </div>
       </header>
@@ -57,8 +57,9 @@
             with updates that we believe are relevant to the CASA community,
             and with announcements for upcoming events by CASA and by
             other student-oriented groups.
-          <br><br>
-            Please join our Slack workspace and mailing list <a href="join/index.html">here</a>.
+          </p>
+          <p>
+            Please <a href="join/index.html">join our Slack workspace and mailing list</a>.
             If you would like to change the frequency at which you receive these updates, you can change the settings at our <a href="https://groups.google.com/g/comparchsa">Google Group page</a> once you have been added.
           </p>
           <h3>Social Media</h3>
