--- a/events/index.html
+++ b/events/index.html
@@ -18,7 +18,7 @@
       <header class="page-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-12 text-center">
-            <a class="page-title text-dark" href="#">Computer Architecture Student Association</a>
+            <a class="page-title text-dark" href="index.html">Computer Architecture Student Association</a>
           </div>
         </div>
       </header>
@@ -81,7 +81,7 @@
             </div>
             <h5>CASA at MICRO 2020</h5>
             <p>
-              CASA will be helping to organize the Meet-a-Senior-Architect and Meet-a-Senior-Student at MICRO 2020.  Signups will be posted soon!
+              CASA will be helping to organize the Meet-a-Senior-Architect and Meet-a-Senior-Student at MICRO 2020.  If you're a student who is registered for MICRO, we encourage you to take part in both of these programs!
             </p>
           </div>
         </div>
