--- a/resources/index.html
+++ b/resources/index.html
@@ -18,7 +18,7 @@
       <header class="page-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-12 text-center">
-            <a class="page-title text-dark" href="#">Computer Architecture Student Association</a>
+            <a class="page-title text-dark" href="index.html">Computer Architecture Student Association</a>
           </div>
         </div>
       </header>
