--- a/join/index.html
+++ b/join/index.html
@@ -47,7 +47,7 @@
         <div class="col-md-12">
           <h3>CASA Sign-Up</h3>
           <p>
-            We are so glad you chose to join our organization! Please fill out this <a href="https://forms.gle/NxxgVGAcVmFs5kRcA">Google Form</a> and we will add you to the mailing list and Slack workspace shortly.
+            We are so glad you chose to join our organization! Please fill out this <a href="https://forms.gle/NxxgVGAcVmFs5kRcA">Google Form</a> and we will add you to our mailing list and Slack workspace shortly.
           </p>
         </div>
       </div>
