Updated lead text

--- a/resources/index.html
+++ b/resources/index.html
@@ -37,7 +37,7 @@
       <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark lead lead-resources">
         <div class="col-md-6 px-0">
           <h2 class="display-4 lead-title">Resources for Students</h2>
-          <p class="lead my-3">[Placeholder] Links and descriptions of blog posts, articles, etc. written by CASA, as well as external resources.</p>
+          <p class="lead my-3">New student in architecture?  Seasoned veteran?  Either way, we've got a bunch of things to help you out.</p>
         </div>
       </div>
     </div>
