added steering committee members.

--- a/about/index.html
+++ b/about/index.html
@@ -97,20 +97,55 @@
             <div class="about-officer-row">
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p>Name</p>
-                <p>Email, Affiliation</p>
+                <p><a href="http://www.elbagarza.com/">Elba Garza</a> </br>Texas A&M University</p>
+<!--                 <p>Email, Affiliation</p> -->
               </div>
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p>Name</p>
-                <p>Email, Affiliation</p>
+                <p><a href="web.eecs.umich.edu/~aporvaa">Aporva Amarnath</a></br>University of Michigan, Ann Arbor</p>
               </div>
+
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p>Name</p>
-                <p>Email, Affiliation</p>  
+                <p><a href="http://amahmou2.web.engr.illinois.edu/">Abdulrahman Mahmoud</a> </br>University of Illinois at Urbana-Champaign</p>
               </div>
+
             </div>
+
+            <div class="about-officer-row">
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="http://www.cs.utah.edu/~sarab/">Sarabjeet Singh</a></br>University of Utah</p> 
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://subhankarpal.com"> Subhankar Pal</a> </br>University of Michigan, Ann Arbor</p> 
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://tcxxxx.github.io/">Tiancheng Xu</a> </br>Rice University</p>
+              </div>
+
+            </div>
+
+            <div class="about-officer-row">
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://liuty10.github.io">Tianyi Liu</a> </br>The University of Texas at San Antonio</p>
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://ugupta.com/">Udit Gupta</a> </br>Harvard University</p>
+              </div>
+
+            </div>
+
+
         </div>
       </div> 
 
