added sc members.

--- a/about/index.html
+++ b/about/index.html
@@ -116,6 +116,24 @@
 
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href=" https://www.linkedin.com/in/georgiostziantzioulis/">Georgios Tziantzioulis</a> </br>Princeton University</p>
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://sites.google.com/site/gururajshome/home">Gururaj Saileshwar</a> </br>Georgia Institute of Technology</p>
+              </div>
+
+
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
+                <p><a href="https://pothukuchi.web.illinois.edu/">Raghavendra Pradyumna Pothukuchi</a></br>University of Illinois at Urbana-Champaign</p> 
+              </div>
+            </div>
+
+            <div class="about-officer-row">
+              <div class="about-officer-column">
+                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p><a href="http://www.cs.utah.edu/~sarab/">Sarabjeet Singh</a></br>University of Utah</p> 
               </div>
 
@@ -128,11 +146,9 @@
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p><a href="https://tcxxxx.github.io/">Tiancheng Xu</a> </br>Rice University</p>
               </div>
-
             </div>
 
             <div class="about-officer-row">
-
               <div class="about-officer-column">
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p><a href="https://liuty10.github.io">Tianyi Liu</a> </br>The University of Texas at San Antonio</p>
@@ -142,9 +158,7 @@
                 <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
                 <p><a href="https://ugupta.com/">Udit Gupta</a> </br>Harvard University</p>
               </div>
-
             </div>
-
 
         </div>
       </div> 
